# fhir.smart.scopes

./: LICENSE  Pipfile  README.md  main.py  pyproject.toml
scopes/: __init__.py
src/: scopes.py
tests/: test_functions.py  test_init.py  test_methods.py  test_methods_add.py  test_methods_copy.py  test_methods_delete.py  test_methods_information.py
