[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fhir.smart.scopes"
version = "0.0.2"
authors = [
  { name="Katsch Florian", email="florian.katsch@dhp.lbg.ac.at" },
]
description = "A simple wrapper around SMART on FHIR scopes to treat them as Python sets."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Healthcare Industry",
    "Natural Language :: English"
]

[project.urls]
"Homepage" = "https://github.com/thisismexp/fhir.smart.scopes"
"Bug Tracker" = "https://github.com/thisismexp/fhir.smart.scopes/issues"